AWS-EKS/EKS-Workloads-on-Fargate/Fargate-Profiles-Advanced-YAML/kube-manifests/02-Applications/01-ns-app1/01-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: ns-app1
# Apps deployed in this namespace will run on a EC2 Managed Node Group
